fix: 设置 model 工具栏 z-index

--- a/components/modal/style/index.scss
+++ b/components/modal/style/index.scss
@@ -14,6 +14,7 @@
 /* 工具栏 */
 .qyrc-modal-tool {
   position: absolute;
+  z-index: 1;
   cursor: pointer;
   color: transparent;
 
